packages/parser/test/tokenizer/E0002-char-eof.txt
'
===== err =====
/test/tokenizer/E0002-char-eof.txt:1:1: SyntaxError: E0002 - Unterminated character literal
1 | '
  | ^
